fix: avarik-title text-alignment

--- a/components/avarik-saga/avarik-title/avarik-title.scss
+++ b/components/avarik-saga/avarik-title/avarik-title.scss
@@ -5,6 +5,7 @@
     align-items: center;
     margin-bottom: 1rem;
     width: fit-content;
+    text-align: center;
     .left,
     .right {
         width: 50px;
